web-deployment.yaml
#apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: web
  name: web
  namespace: minikube
spec:
  selector:
    matchLabels:
      service: web
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25% 
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
      - envFrom:
          - configMapRef:
                  name: jitsi-env
        image: jitsi/web
        name: web
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            memory: "200Mi"
            cpu: "50m"
          limits:
            memory: "300Mi"
            cpu: "100m"
status: {}
