web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: jitsi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: lets-encrypt
  rules:
  - host: gcp.devopsk8s.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
